--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
-    "react-compare-image": "^3.5.4",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "sonner": "^2.0.3",
