--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "url": "https://github.com/WuChenDi/clearify.git"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "clean": "bash ./scripts/clean.sh"
   },
   "dependencies": {
-    "@huggingface/transformers": "^3.5.1",
-    "@next/third-parties": "15.3.2",
+    "@huggingface/transformers": "^3.5.2",
+    "@jsquash/avif": "^2.1.1",
+    "@jsquash/jpeg": "^1.6.0",
+    "@jsquash/jxl": "^1.2.0",
+    "@jsquash/png": "^3.1.1",
+    "@jsquash/webp": "^1.5.0",
+    "@next/third-parties": "15.3.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-hover-card": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -25,14 +30,14 @@
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slider": "^1.3.2",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.503.0",
-    "next": "15.3.2",
+    "next": "15.3.3",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
@@ -40,7 +45,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -50,7 +56,7 @@
     "@types/react-dom": "^19",
     "@webgpu/types": "^0.1.60",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
