--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/WuChenDi/clearify.git"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,13 +19,13 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
-    "@huggingface/transformers": "^3.7.2",
+    "@huggingface/transformers": "^3.7.3",
     "@jsquash/avif": "^2.1.1",
     "@jsquash/jpeg": "^1.6.0",
     "@jsquash/jxl": "^1.3.0",
     "@jsquash/png": "^3.1.1",
     "@jsquash/webp": "^1.5.0",
-    "@next/third-parties": "15.5.2",
+    "@next/third-parties": "15.5.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -42,8 +42,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.539.0",
-    "next": "15.5.2",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.3",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19",
@@ -61,9 +61,9 @@
     "@types/react-dom": "^19",
     "@webgpu/types": "^0.1.64",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5",
     "worker-loader": "^3.0.8"
   }
