--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,14 @@ web_modules/
 .env.production.local
 .env.local
 
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
