--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/WuChenDi/clearify.git"
   },
   "scripts": {
-    "dev": "next dev --port 3000",
-    "build": "next build",
+    "dev": "next dev --port 3000 --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "clean": "bash ./scripts/clean.sh"
@@ -19,13 +19,13 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
-    "@huggingface/transformers": "^3.7.3",
+    "@huggingface/transformers": "^3.7.6",
     "@jsquash/avif": "^2.1.1",
     "@jsquash/jpeg": "^1.6.0",
     "@jsquash/jxl": "^1.3.0",
     "@jsquash/png": "^3.1.1",
     "@jsquash/webp": "^1.5.0",
-    "@next/third-parties": "15.5.3",
+    "@next/third-parties": "16.0.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -42,8 +42,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "lucide-react": "^0.552.0",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19",
@@ -56,14 +56,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@webgpu/types": "^0.1.64",
+    "@webgpu/types": "^0.1.66",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.8",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "worker-loader": "^3.0.8"
   }
