--- a/package.json
+++ b/package.json
@@ -3,47 +3,50 @@
   "version": "1.0.0",
   "private": true,
   "description": "Powerful web-based tools for your image editing needs",
-  "author": "wudi",
+  "author": "wudi <wuchendi96@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/WuChenDi",
   "repository": {
-    "type": "http",
+    "type": "git",
     "url": "https://github.com/WuChenDi/clearify.git"
   },
   "scripts": {
     "dev": "next dev --port 3000 --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "biome check",
+    "format": "biome format --write",
     "clean": "bash ./scripts/clean.sh"
   },
   "dependencies": {
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
-    "@huggingface/transformers": "^3.7.6",
+    "@huggingface/transformers": "^3.8.1",
     "@jsquash/avif": "^2.1.1",
     "@jsquash/jpeg": "^1.6.0",
     "@jsquash/jxl": "^1.3.0",
     "@jsquash/png": "^3.1.1",
     "@jsquash/webp": "^1.5.0",
-    "@next/third-parties": "16.0.1",
+    "@next/third-parties": "16.0.7",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "lucide-react": "^0.556.0",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19",
@@ -51,17 +54,15 @@
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@biomejs/biome": "^2.3.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@webgpu/types": "^0.1.66",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "@webgpu/types": "^0.1.67",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
