chore(deps): upgrade dependencies and refactor UI architecture
- Dependencies:
  - Upgrade Next.js (16.0.10 -> 16.1.4)
  - Upgrade Biome (2.3.8 -> 2.3.11) and @types/node (24 -> 25)
  - Upgrade lucide-react (0.561.0 -> 0.562.0)
- UI Library & Radix:
  - Migrate style from 'new-york' to 'radix-nova' in components.json
  - Consolidate individual Radix packages into a single monorepo dependency
  - Reposition iconLibrary and update utils alias path
- Housekeeping:
  - Sync lockfile with latest minor/patch versions

--- a/components.json
+++ b/components.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
+  "style": "radix-nova",
   "rsc": true,
   "tsx": true,
   "tailwind": {
@@ -10,12 +10,13 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/cn",
+    "utils": "@/lib",
     "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
-  "iconLibrary": "lucide"
+  "registries": {}
 }
