--- a/package.json
+++ b/package.json
@@ -28,43 +28,32 @@
     "@jsquash/jxl": "^1.3.0",
     "@jsquash/png": "^3.1.1",
     "@jsquash/webp": "^1.5.0",
-    "@next/third-parties": "16.0.10",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.8",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
+    "@next/third-parties": "16.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "lucide-react": "^0.562.0",
+    "next": "16.1.4",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "radix-ui": "^1.4.3",
     "react": "^19",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.8",
+    "@biomejs/biome": "^2.3.11",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^24",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@webgpu/types": "^0.1.68",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "worker-loader": "^3.0.8"
   }
