--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/WuChenDi/clearify.git"
   },
   "scripts": {
-    "dev": "next dev --port 3000 --webpack",
+    "dev": "next dev --port 3008 --webpack",
     "build": "next build --webpack",
     "start": "next start",
     "lint": "biome check",
@@ -41,13 +41,14 @@
     "react": "^19",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19",
-    "react-dropzone": "^14.3.8",
+    "react-dropzone": "^14.4.0",
+    "shadcn": "^3.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.13",
+    "@biomejs/biome": "^2.3.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^25",
     "@types/react": "^19",
